--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -16,4 +16,16 @@
     {{ form.submit() }}
 </form>
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <ul>
+        {% for category, message in messages %}
+            {% if category == 'danger' %}
+                <li class="alert alert-danger">{{ message }}</li>
+            {% endif %}
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+
 {% endblock %}
